# emthin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README_cn.md  cliff.toml  release.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml
crates/emskin/: CLAUDE.md  Cargo.toml
crates/emskin-dbus/src/proxy/: mod.rs
crates/emskin/src/: activation.rs  cli.rs  element.rs  input.rs  lib.rs  main.rs  mirror_render.rs  tick.rs  util.rs  winit.rs
crates/emskin/src/handlers/: apps.rs  compositor.rs  dialogs.rs  mod.rs  xdg_shell.rs
crates/emskin/src/ipc/: connection.rs  dispatch.rs  jsonrpc.rs  messages.rs  mod.rs
crates/emskin/src/state/: dbus.rs  focus.rs  ime.rs  mod.rs  workspace.rs
crates/emskin/src/xwayland_satellite/: sockets.rs
crates/emthin/: Cargo.toml  build.rs  rustfmt.toml
crates/emthin-clipboard/: Cargo.toml
crates/emthin-clipboard/src/: backend.rs  data_control.rs  lib.rs  wl_data_device.rs  x11.rs
crates/emthin-dbus/: Cargo.toml
crates/emthin-dbus/src/: fcitx.rs  lib.rs
crates/emthin-dbus/src/broker/: mod.rs  state.rs
crates/emthin-dbus/src/proxy/: cmsg.rs  mod.rs  signals.rs
crates/emthin-dbus/src/router/: bridge.rs  ipc.rs  mod.rs  rule.rs
crates/emthin-dbus/src/wire/: frame.rs  mod.rs  sasl.rs
crates/emthin/assets/: emthin.desktop
crates/emthin/docs/: ime-design.md
crates/emthin/src/: activation.rs  cli.rs  clipboard_bridge.rs  element.rs  grabs.rs  input.rs  lib.rs  main.rs  mirror_render.rs  tick.rs  util.rs  winit.rs
crates/emthin/src/handlers/: apps.rs  compositor.rs  dialogs.rs  dmabuf.rs  layer_shell.rs  mod.rs  output.rs  pointer_constraints.rs  seat.rs  selection.rs  xdg_shell.rs
crates/emthin/src/ipc/: dispatch.rs  jsonrpc.rs  messages.rs  mod.rs
crates/emthin/src/protocols/: workspace.rs
crates/emthin/src/state/: apps.rs  cursor.rs  dbus.rs  emacs.rs  focus.rs  ime.rs  migration.rs  mod.rs  workspace.rs  xwayland.rs
crates/emthin/src/xwayland_satellite/: mod.rs  spawn.rs  watch.rs
crates/emthin/tests/: xwayland_satellite.rs  xwayland_satellite_watch.rs
docs/: clipboard-flows.md  clipboard-protocols.md  migration-policy-design.md
docs/superpowers/plans/: 2026-06-24-emskin-launch-desktop-parser.md  2026-06-24-ipc-jsonrpc.md  2026-06-26-dbus-router.md  2026-06-26-elisp-architecture-restructuring.md  2026-06-26-elisp-architecture-step1.md  2026-06-26-elisp-layout-generics.md  2026-06-28-migration-policy.md
docs/superpowers/specs/: 2026-06-24-elisp-thunk-refactor-design.md  2026-06-24-emskin-launch-desktop-parser-design.md  2026-06-24-ipc-jsonrpc-design.md  2026-06-26-dbus-router-design.md  2026-06-26-elisp-architecture-step1-design.md  2026-06-26-elisp-layout-generics-design.md
elisp/: emskin-app.el  emskin-connect.el  emskin-ipc.el  emskin-launch.el  emskin-workspace.el  emskin.el  emthin-app.el  emthin-connect.el  emthin-dispatch.el  emthin-geom.el  emthin-ipc.el  emthin-launch.el  emthin-layout.el  emthin-manage.el  emthin-mirrors.el  emthin-sync.el  emthin-workspace.el  emthin.el
tests/elisp/: emskin-app-tests.el
