[workspace]
resolver = "2"
members = ["crates/emskin", "crates/emskin-clipboard", "crates/emskin-dbus"]
# Guard against rust-analyzer's scratch target directory (which it may create
# under crates/target/rust-analyzer/) being picked up as a workspace member.
exclude = ["crates/target"]

[workspace.package]
version = "0.3.12"
edition = "2021"
authors = ["Lee <loyalpartner@163.com>"]
license = "GPL-3.0"
repository = "https://github.com/emskin/emskin"

[workspace.dependencies]
smithay = { git = "https://github.com/emskin/smithay.git", branch = "emskin-patches", default-features = false, features = [
    "backend_winit",
    "backend_drm",
    "wayland_frontend",
    "desktop",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[profile.release]
lto = true
