[package]
name = "emskin"
# NOTE: cargo-aur (0.x) does not understand `version.workspace = true`.
# Keep these as literal values until cargo-aur gains workspace-inheritance
# support, then migrate them back to `.workspace = true`.
version = "0.3.12"
edition = "2021"
authors = ["Lee <loyalpartner@163.com>"]
license = "GPL-3.0"
repository = "https://github.com/emskin/emskin"
description = "Embed Wayland applications inside Emacs"

[dependencies]
emskin-clipboard = { path = "../emskin-clipboard" }
emskin-dbus = { path = "../emskin-dbus" }
smithay.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
winit_crate = { package = "winit", version = "0.30", default-features = false }
# wayland-client still needed for the xdg_activation_v1 client helper in
# main.rs::activate_main_surface_if_env_token. Clipboard backends live in
# the emskin-clipboard crate now.
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "server", "staging"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"


[package.metadata.release]
# cargo-release runs hooks with the package root as CWD. Scope the
# git-cliff hook to this crate so it fires exactly once per release,
# and write CHANGELOG.md to the workspace root via `../../`.
pre-release-hook = ["git-cliff", "-o", "../../CHANGELOG.md", "--tag", "v{{version}}"]
# Join the "workspace" shared-version group so cargo-release treats
# this crate's version as in lockstep with `[workspace.package].version`
# for the commit message + tagging, even though we can't use
# `version.workspace = true` here (cargo-aur 0.x limitation).
shared-version = "workspace"

# shared-version alone does NOT rewrite the literal `version = "..."`
# above — cargo-release skips the file write when it thinks a crate
# "inherits" the version (see its dry-run output "inherited from
# workspace"), even though our crate actually doesn't. Force the
# rewrite with a regex replacement here; otherwise each release drifts
# by one version and the AUR PKGBUILD's source URL 404s.
[[package.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
search = '^version = "[0-9]+\.[0-9]+\.[0-9]+"$'
replace = 'version = "{{version}}"'
exactly = 1

[package.metadata.aur]
depends = ["wayland", "libxkbcommon", "libxkbcommon-x11", "mesa", "libinput", "seatd", "fontconfig", "freetype2", "ttf-dejavu", "xorg-xwayland", "xwayland-satellite"]
optdepends = [
    "emacs-wayland: pgtk Emacs (recommended)",
    "emacs: X11 Emacs (works via xwayland-satellite)",
]
