[package]
name = "emthin-dbus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DBus bridge primitives (fcitx5 intercept + gio-based proxy) for the emthin compositor"

[dependencies]
tracing.workspace = true
serde = { workspace = true }
gio = { version = "0.20", features = ["v2_80"] }
glib = { version = "0.20" }
libc = "0.2"
unicode-segmentation = "1"
